--- a/reversearray.html
+++ b/reversearray.html
@@ -1,14 +1,19 @@
 <html>
 <p >Reversing string and converting array</p>
 <p id="result"></p>
-<p id="result1"></p>
+
 <script>
 let fruits= "Kiwi";
-let str=fruits.length;
-document.getElementById("result").innerHTML=str;
-document.getElementById("result1").innerHTMl= fruits.slice(length-1, 0);
+let reverse="";
+for(let i=fruits.length -1; i>=0; i--){
+  reverse +=fruits[i];
+}
+window.alert("reverse  "+reverse);
+for(let i=0; i<fruits.length-1; i++){
+window.alert(fruits[i]);
 
-console.log(result1);
+}
+
   </script>
 
 
